# zengxuanpj

./: .gitignore  README.md
Project+8/Benchmark/: ori_sol.mat  sol_after_PRIMA.mat
Project+8/report/: project8.docx
Project+8/src/: 100q2pi1e9.fig  PRIMA.m  error.fig  main.m  ori_sol.m  sol_after_PRMIA.m
project+7/Benchmark/: RLC_s3.sp  bus8bit8seg.sp
project1/project1/benchmark/: Bus_l12s16.sp  Tree_l7.sp
project1/project1/report/: project1.docx
project1/project1/src/: block_matrix_print.m  filelist.f  load_results.m  main.asv  main.m  matrix_gen.asv  matrix_gen.m  newnet_mtr.m  node_num.m  output.m  sparse_matrix_print.m  sub_cur_map.asv  sub_cur_map.m  sub_cur_rec.m  sub_net.m  subckt.m
project1/project1/stamp-1.0/: INSTALL  Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.in
project1/project1/stamp-1.0/src/: Makefile  cap.cpp  device.h  ind.cpp  isrc.cpp  isrc.h  main.cpp  mat.h  mut.cpp  res.cpp  stamp.cpp  stamp.h  util.cpp  vsrc.cpp  vsrc.h
project1/project1/stamp-1.0/src/.deps/: cap.Po  ind.Po  isrc.Po  main.Po  mut.Po  res.Po  stamp.Po  util.Po  vsrc.Po
project2/: A1.mat  A2.mat  sadd.c  smd.c  smul.c  ssub.c
project3-5/project3-5/: LU_gen.m  RLC_s3.lis  RLC_s3_pul.fig  RLC_s3_sin.fig  RLC_s3p.lis  bus32seg16.fig  bus32seg16.lis  bus8bit8seg.fig  bus8bit8seg.lis  main.m  solve_LU.m  src_gen.m
project6/: amp.fig  diff_amp.sp  inv.fig  inv.sp
project6/report/: project6.docx
project6/src/: Famp.m  Finv.m  Jamp.m  Jinv.m  amp_main.m  inv_main.m  pul_gen.m  sin_gen.m
(+46 files in other folders)
