#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(stamp, 1.0, yhlu@fudan.edu.cn)
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_SRCDIR([src/vsrc.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX


# Checks for libraries.
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [fabs])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.

# This mechanism allows one to enable debug compilations...
AC_ARG_ENABLE(debug,
        [  --enable-debug     enable debugging and disable optimization],
	[  if test "$enable_debug" = "yes"; then
	      DEBUG_CXXFLAGS="-g -DDEBUG"
	   else
	      DEBUG_CXXFLAGS="-O2 -DNDEBUG"
	   fi
	]
	)
AM_CONDITIONAL(ENABLE_DEBUG, test "$enable_debug" = "yes")
CXXFLAGS="$DEBUG_CXXFLAGS"
CPPFLAGS="$DEBUG_CXXFLAGS"


AC_CONFIG_FILES([Makefile
		src/Makefile])
AC_OUTPUT
